; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/mv/extr_mpic.c_mpic_ipi_send.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/mv/extr_mpic.c_mpic_ipi_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intr_irqsrc = type { i32 }

@MAXCPU = common dso_local global i32 0, align 4
@mv_mpic_sc = common dso_local global i32 0, align 4
@MPIC_SOFT_INT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mpic_ipi_send(i32 %0, %struct.intr_irqsrc* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.intr_irqsrc*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store %struct.intr_irqsrc* %1, %struct.intr_irqsrc** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %9, align 4
  store i32 0, i32* %10, align 4
  br label %11

11:                                               ; preds = %26, %4
  %12 = load i32, i32* %10, align 4
  %13 = load i32, i32* @MAXCPU, align 4
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %29

15:                                               ; preds = %11
  %16 = load i32, i32* %10, align 4
  %17 = call i64 @CPU_ISSET(i32 %16, i32* %7)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %25

19:                                               ; preds = %15
  %20 = load i32, i32* %10, align 4
  %21 = add nsw i32 8, %20
  %22 = shl i32 1, %21
  %23 = load i32, i32* %9, align 4
  %24 = or i32 %23, %22
  store i32 %24, i32* %9, align 4
  br label %25

25:                                               ; preds = %19, %15
  br label %26

26:                                               ; preds = %25
  %27 = load i32, i32* %10, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %10, align 4
  br label %11

29:                                               ; preds = %11
  %30 = load i32, i32* %8, align 4
  %31 = load i32, i32* %9, align 4
  %32 = or i32 %31, %30
  store i32 %32, i32* %9, align 4
  %33 = load i32, i32* @mv_mpic_sc, align 4
  %34 = load i32, i32* @MPIC_SOFT_INT, align 4
  %35 = load i32, i32* %9, align 4
  %36 = call i32 @MPIC_WRITE(i32 %33, i32 %34, i32 %35)
  ret void
}

declare dso_local i64 @CPU_ISSET(i32, i32*) #1

declare dso_local i32 @MPIC_WRITE(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
